finished restaurant order management routes/views etc

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -103,7 +103,7 @@
 	font-weight: normal;
 	font-variant: normal;
 	font-family: 'ElegantIcons';
-	color:#78cfcf;
+	color:#ac0000;
 	line-height: 1;
 	speak: none;
 	-webkit-font-smoothing: antialiased;
