--- a/public/css/dropzone.css
+++ b/public/css/dropzone.css
@@ -432,7 +432,7 @@
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     border-radius: 3px;
-    background-color: #85c99d;
+    background-color: #dd3e3e;
 	color:#fff;
     background-image: none;
     border: none;
