--- a/public/coming_soon/css/style.css
+++ b/public/coming_soon/css/style.css
@@ -77,7 +77,7 @@ h3 {
 -webkit-border-radius: 3px;
 -moz-border-radius: 3px;
 border-radius: 3px;
-background:#85c99d;
+background:#dd3e3e;
 border:none;
 color:#fff;
 display:block;
@@ -93,7 +93,7 @@ outline:none;
 }
 .btn-check:hover {
 background:#fff;
-color:#85c99d;
+color:#dd3e3e;
 }
 
 hr {
