--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -86,7 +86,7 @@ ul.recent_post li:last-child{
 
 .post_info {
 	padding:10px;
-	background-color:#78cfcf;
+	background-color:#ac0000;
 	margin-bottom:12px;
 	color:#fff;
 }
