--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,7 +62,7 @@ h3 .slide_typo strong {font-family:"Helvetica Neue", Helvetica, Arial, sans-seri
 .slide_typo_2{color:#fff; font-size:18px; white-space:nowrap}
 
 .box_style_2 h2.inner {
-	background-color:#78cfcf; 
+	background-color:#ac0000; 
 	color:#fff; 
 	margin:-25px -25px 25px -25px; 
 	padding:12px 15px; 
@@ -300,7 +300,7 @@ header{
 	z-index:99999;
 }
 header.sticky{
-	background-color: #78cfcf;
+	background-color: #ac0000;
 	-webkit-box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.41);
 	-moz-box-shadow:0px 2px 10px -2px rgba(0, 0, 0, 0.41);
 	box-shadow:0px 2px 10px -2px rgba(0, 0, 0, 0.41);
@@ -1260,7 +1260,7 @@ ul.opening_list li span{
     position: relative;
     padding: 11% 100px 10% 100px;
     height: 400px;
-    background-color: #78cfcf;
+    background-color: #ac0000;
 	color:#fff;
 	font-size:16px;
 }
@@ -1316,7 +1316,7 @@ ul.opening_list li span{
 	width:100%;
 	height:100%;
 	bottom:0;
-	background-color:#78cfcf; 
+	background-color:#ac0000; 
 	z-index:999999; 
 }
 .sk-spinner-wave.sk-spinner {
@@ -1559,7 +1559,7 @@ select.form-control.form-white{
 	position: relative;
 	padding:1px 30px 10px 30px;
 	text-align: center;
-	background: #78cfcf;
+	background: #ac0000;
 	border-radius: 0px;
 	border:none;
 }
@@ -2079,7 +2079,7 @@ a.bt_filters{
 
 /*4.4 Map listing */
 header#map_listing_header{
-	background-color: #78cfcf;
+	background-color: #ac0000;
 	position:fixed;
 	-webkit-box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.41);
 	-moz-box-shadow:0px 2px 10px -2px rgba(0, 0, 0, 0.41);
