--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1042,7 +1042,7 @@ ul#cat_nav li a:hover, ul#cat_nav li a.active{
 	box-sizing: border-box;
 	margin:auto;
 	margin-bottom:15px;
-	background-color:#fff;
+	/*background-color:#fff;*/
 }
 #sub_content #thumb img{
 	width:120px;
